fix product actions wrapping

--- a/styles.css
+++ b/styles.css
@@ -632,6 +632,10 @@ body {
     transition: all 0.35s;
 }
 
+.product-actions-container {
+    text-wrap: nowrap;
+}
+
 .product-card:not(.ordered) .add {
     margin-top: 78px;
 }
